# smak

./: .gitignore  .gitlab-ci.yml  IDEA.md  README.md  clients.py  config.py  conftest.py  github_issues.py  gitlab_issues.py  issue_body.py  notifier.py  polling.py  pyproject.toml  requirements.txt  test_data.py
.github/workflows/: smoke-test.yml
tests/: test_happy_path.py  test_harness.py  test_multi_step.py
